fix bug: display area too large in VE

--- a/resources/extensions/VisualEditor.core.less
+++ b/resources/extensions/VisualEditor.core.less
@@ -11,10 +11,10 @@
 		}
 
 		// Make the gutter area clickable (T162838)
-		.ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface {
-			margin-left: -@content-padding;
-			margin-right: -@content-padding;
-		}
+		// .ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface {
+		// 	margin-left: -@content-padding;
+		// 	margin-right: -@content-padding;
+		// }
 
 		.ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface .ve-ce-documentNode,
 		.ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface .ve-ui-surface-placeholder {
